testsuite/codegen/compile-fail/main-method-missing.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
// CHECK-L: main-method-missing.verona:${LINE:+1}:7: error: Class 'Main' does not have a 'main' method
class Main { }
